utils/styles/main.scss
/* ... */
.navbarShadow {
  -webkit-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.075);
  -moz-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.075);
  box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.075);
}

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

.full-height {
  min-height: 100vh;
}

.homeBannerImage {
  @media screen and (min-width: $lg-break) {
    margin-left: -25rem;
  }
}

.banner {
  &-head {
    font-size: $font-xxl;
    font-family: $header-font;
  }

  &-img {
    max-height: 500px;
  }
}

.header {
  font-size: $font-xxl;
  font-family: $header-font;
}

.sub-head {
  font-size: $font-l;
  font-family: $title-font;
}

.link {
  font-size: $font-m;
  font-family: $title-font;
  &:hover {
    color: inherit;
  }
}

// to avoid outline to slick slides
.slick-slide {
  div:nth-child(1) {
    div:nth-child(1) {
      &:focus {
        border: none;
        outline: none;
      }
    }
  }
}

.vision {
  .card {
    border-radius: 2.75rem;
    border: none;

    .illustration {
      margin-top: -1.5rem;
      z-index: 1;
      margin-bottom: -11rem;
    }

    .location {
      border-radius: 2rem 2rem 0 0;
    }
  }
  .highlight {
    // border-radius: 2.75rem;
    border-bottom-left-radius: 2.75rem;
    border-bottom-right-radius: 2.75rem;
    color: #fff;
    margin-bottom: 0;
    text-align: center;
    opacity: 0.8;
  }
}

.locations {
  .card {
    border-radius: 2.75rem;
    min-height: 196px;

    .illustration {
      max-width: 175px;
    }
  }
  .highlight {
    border-radius: 0;
  }
}

.investors {
  .logo {
    max-width: 124px;
  }
  @media screen and (min-width: $md-break) {
    .logo {
      margin-right: 4rem;
    }
  }
}

#products {
  &.transport {
    background: linear-gradient(
      to bottom,
      $green-light 0%,
      $green-light 50%,
      $green-light 50%,
      #fff 50%,
      #fff 100%
    );
  }
  &.payments {
    background: linear-gradient(to bottom, $blue 0%, $blue 50%, $blue 50%, #fff 50%, #fff 100%);
  }
  &.food-delivery {
    background: linear-gradient(
      to bottom,
      $orange-light 0%,
      $orange-light 50%,
      $orange-light 50%,
      #fff 50%,
      #fff 100%
    );
  }
  &.logistics {
    background: linear-gradient(to bottom, $red 0%, $red 50%, $red 50%, #fff 50%, #fff 100%);
  }
  &.entertainment {
    background: linear-gradient(
      to bottom,
      $pink-light 0%,
      $pink-light 50%,
      $pink-light 50%,
      #fff 50%,
      #fff 100%
    );
  }
  &.lifestyle-service {
    background: linear-gradient(
      to bottom,
      $yellow-light 0%,
      $yellow-light 50%,
      $yellow-light 50%,
      #fff 50%,
      #fff 100%
    );
  }

  .card {
    border-radius: 5.3rem;
    border: 1px solid #eee;
    margin: 25px;
    .sub-head {
      font-family: $header-font;
    }
  }

  .shadowCard {
    background-color: #eee;
    position: absolute;
    left: -13%;
    top: 0;
    width: 108%;
    height: 88%;
    z-index: -1;
    @media screen and (min-width: $md-break) {
      left: -11%;
    }
    @media screen and (min-width: $lg-break) {
      left: -8%;
    }
  }

  .slick-dots {
    bottom: -50px;
    opacity: 0.8;
    a {
      padding: 10px;
      font-family: $body-font;
      border-radius: 20px;
      font-size: 14px;
    }
    .slick-active {
      opacity: 1;
      a {
        border: 1px solid;
        font-family: $header-font;
      }
    }
  }

  .partner-logos {
    max-width: 384px;

    .logo {
      width: 128px;
    }
  }
}

#insta-stories {
  > :first-child {
    > :first-child {
      border-radius: 52px;
      height: 360px !important;
      background: none !important;
      > :first-child {
        bottom: -7.3rem;
        filter: none;
        div {
          height: 4px !important;
          border-radius: 2px;
        }
      }
    }
  }

  img {
    border-radius: 52px;
  }
}

.blackBackground {
  background-color: #000;
  background-repeat: no-repeat;
  min-height: 100vh;
  width: 100%;
  z-index: -1;
}

.teamsJobs {
  background: linear-gradient(to bottom, #000 10rem, #fff 10rem);
  @media screen and (max-width: 576px) {
    background: linear-gradient(to bottom, #000 7rem, #fff 7rem);
  }
  .full-height {
    min-height: auto;
  }
}

.yellow-bg-gradient {
  background: #f7ce55 -webkit-gradient(linear, left top, left bottom, color-stop(50%, rgba(255, 255, 255, 0)), to(#e18700));
  background: #f7ce55 linear-gradient(to bottom, rgba(255, 255, 255, 0) 50%, #e18700);
  background-repeat: no-repeat;
  position: absolute;
  top: 0;
  left: 0;
  height: 120vh;
  width: 100%;
  z-index: -1;
}
@media screen and (max-width: 2000px) {
  .yellow-bg-gradient {
    background: #f7ce55 linear-gradient(to bottom, rgba(255, 255, 255, 0) 75%, #e18700);
  }
}
@media screen and (min-width: 2000px) {
  .yellow-bg-gradient {
    height: 90vh;
  }
  .full-height {
    min-height: 60vh;
  }
}
@media screen and (max-width: 576px) {
  .yellow-bg-gradient {
    height: 80vh;
  }
}

.xs-listings {
  .header {
    font-size: 2.25rem;
  }
  .odd {
    background-color: rgba(242, 242, 242, 0.81);
  }
  .title {
    color: #101010 !important;
    font-family: $title-font;
  }
  .sub-title {
    color: #848484;
  }
}

.listings,
.xs-listings {
  .text-green {
    &:focus {
      border: none !important;
      box-shadow: none !important;
    }
  }
}

.mobile-search {
  min-height: 100vh;
  .header {
    font-size: 1.125rem;
    font-family: $header-font;
  }

  .results,
  .btn-success {
    background-color: #00aa13 !important;
  }
}

.filter-badge {
  font-size: $font-s;
  border-radius: 8px;
  background-color: #fbf0d7;
  &:hover {
    background-color: #cdc3ad;
  }
}

.clearIcon,
.pointer {
  cursor: pointer;
}

.jobCard {
  color: #696969;
  &:hover {
    background-color: #eee !important;
    color: #242424;
  }
}
.form-control {
  padding: 1rem;
  height: inherit;
  border: none;
  font-family: $navbar-font, 'Font Awesome 5 Free';
  font-size: 0.875rem;
  line-height: normal;
}
/* ... */

